--- a/PPMTool/pom.xml
+++ b/PPMTool/pom.xml
@@ -55,7 +55,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!--  Required for validation to work in Spring Boot 2.3.0+  -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
