Catchup commit - API for project task mostly complete

--- a/PPMTool/src/main/resources/application.properties
+++ b/PPMTool/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3308/PPMTool
+spring.datasource.username=ppmt
+spring.datasource.password=password
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
