--- a/ppmtool-ui/package.json
+++ b/ppmtool-ui/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
+    "jwt-decode": "^3.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -18,7 +19,6 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -40,5 +40,4 @@
       "last 1 safari version"
     ]
   }
- 
 }
